pihole/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: deployment
spec:
  replicas: 1
  template:
    spec:
      volumes:
      - name: etc
        persistentVolumeClaim:
          claimName: etc-pvc
      - name: dnsmasq
        persistentVolumeClaim:
          claimName: dnsmasq-pvc
      - name: dnsmasq-proxy-subdomains
        configMap:
          name: map
          items:
          - key: proxy-subdomains
            path: proxied-subdomains
      containers:
      - name: pihole
        image: pihole
        imagePullPolicy: "IfNotPresent"
        resources:
          requests:
            memory: "256Mi"
            cpu: "200m"
          limits:
            memory: "512Mi"
            cpu: "400m"
        ports:
        - containerPort: 80
          name: pihole-http
          protocol: TCP
        - containerPort: 53
          name: dns
          protocol: TCP
        - containerPort: 53
          name: dns-udp
          protocol: UDP
        volumeMounts:
        - name: etc
          mountPath: /etc/pihole
        - name: dnsmasq
          mountPath: /etc/dnsmasq.d
        - name: dnsmasq-proxy-subdomains
          mountPath: /etc/dnsmasq.d/42-reverse-proxied-subdomains.conf
          subPath: proxied-subdomains
