pihole/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service
spec:
  ports:
  - name: pihole-admin
    port: 80
    targetPort: pihole-http
  - name: pihole-dns-tcp
    port: 53
    targetPort: 53
    nodePort: 30053
    protocol: TCP
  - name: pihole-dns-udp
    port: 53
    targetPort: 53
    nodePort: 30053
    protocol: UDP
  externalTrafficPolicy: Local
  type: LoadBalancer
status:
  loadBalancer:
    ingress:
    - ip: 192.168.1.195
